--- a/Google_Ventilator_Pressure_Prediction.ipynb
+++ b/Google_Ventilator_Pressure_Prediction.ipynb
@@ -20,8 +20,7 @@
       "source": [
         "# Task\n",
         "The data obtained from Kaggle [here](https://www.kaggle.com/competitions/ventilator-pressure-prediction/data) with more than 4 millions rows.\n",
-        " \"The ventilator data used was produced using a modified open-source ventilator connected to an artificial bellows test lung via a respiratory circuit. The diagram below illustrates the setup, with the two control inputs highlighted in green and the state variable (airway pressure) to predict in blue. The first control input is a continuous variable from 0 to 100 representing the percentage the inspiratory solenoid valve is open to let air into the lung (i.e., 0 is completely closed and no air is let in and 100 is completely open). The second control input is a binary variable representing whether the exploratory valve is open (1) or closed (0) to let air out.\n",
-        "In this competition, participants are given numerous time series of breaths and will learn to predict the airway pressure in the respiratory circuit during the breath, given the time series of control inputs.\""
+        " \"The ventilator data used was produced using a modified open-source ventilator connected to an artificial bellows test lung via a respiratory circuit. \""
       ],
       "cell_type": "markdown",
       "metadata": {
